[tool.poetry]
name = "leetcode"
version = "0.1.0"
description = ""
authors = ["julianfrenzel <26822719+b0lle@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "leetcode", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
